# hw27_django_app

./: manage.py  pyproject.toml  pytest.ini  utils.py
ads/: models.py  permissions.py  serializer.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_options_alter_category_options_and_more.py  0003_alter_ad_name.py  0004_alter_ad_author.py  0005_alter_ad_image.py  0006_rename_author_ad_author_id.py  0007_alter_ad_image.py  0008_alter_ad_image.py  0009_rename_category_ad_category_id.py  0010_remove_ad_author_id_ad_author.py  0011_alter_ad_author.py  0012_rename_author_ad_author_id.py  0013_alter_ad_author_id.py  0014_alter_ad_name.py  0015_alter_ad_name.py  0016_selection.py  0017_category_slug.py  0018_alter_ad_name.py  0019_rename_author_id_ad_author_id_id.py  0020_rename_author_id_id_ad_author_id.py  0021_alter_ad_author_id.py  0022_alter_ad_author_id.py  0023_rename_author_id_ad_author_and_more.py
hw27_django/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py  selection_create_test.py
users/: models.py  serializer.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_rename_locations_user_location_id.py  0003_remove_user_location_id_user_location_id.py  0004_remove_user_location_id_alter_user_role_and_more.py  0005_alter_user_first_name.py  0006_alter_user_managers_user_date_joined_user_email_and_more.py  0007_alter_user_age_alter_user_location_id.py  0008_alter_user_password_alter_user_username.py  (+5 more)
